Update styles for headings in main-content Update topnav classes to extend height Add home-header-container with flex properties (centered) Fix spacing for content areas Classes content-area and masonry-grid should not have parent

--- a/app/Application.css
+++ b/app/Application.css
@@ -49,15 +49,13 @@ main {
 }
 main header {
   background-color: #FFF;
-  height: 50px;
+  height: 78px;
   display: flex;
   flex-direction: row;
-  padding: 1em;
 }
 main section {
   background-color: #F8F9FA;
   color: #222;
-  padding: 1em;
 }
 
 .wrapper.sm .topnav li.menu { display: auto; }
@@ -66,39 +64,59 @@ main section {
 .wrapper.sm .topnav li.link { display: none; }
 .wrapper.md .topnav li.link { display: auto; }
 
-/* Utility Styles */
-.main-content {
-  font-family: inherit;
-  width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
+/* Home Header flex containted in the center */
+.home-header-container {
+  background-image: url(images/app/homepage-image.jpg);
+  display: flex;           /* establish flex container */
+  flex-direction: column;  /* make main axis vertical */
+  justify-content: center; /* center items vertically, in this case */
+  align-items: center;     /* center items horizontally, in this case */
+  height: 442px;
 }
 
-/* What we normally do */
-.main-content h2 {
-  font-size: 2em;
-  font-weight: 500;
-  line-height: 1;
+.header-centered {
+  width: 70%;
+  color: #fff;
+}
+
+/* swap between basic and advanced search */
+.wrapper.sm .tx-search-sm { display: auto; }
+.wrapper.md .tx-search-sm { display: none; }
+
+.wrapper.sm .tx-search-md { display: none; }
+.wrapper.md .tx-search-md { display: auto; }
+
+.masonry-grid {
+  margin: 2em;
+}
+
+
+
+/* Utility Styles */
+h1 {
+  margin: 0;
+  text-shadow: 0 0 60px black;
+  font-size: 1.5em;
+  font-weight: 400;
+  line-height: 1.2;
   color: inherit;
 }
-/* What we do at medium and up */
 @media (min-width: 768px) {
-  .main-content h2 {
-    font-size: 3em;
-    font-weight: 400;
-    line-height: 1.2;
+  h1 {
+    font-size: 2.5em;
+    font-weight: 500;
   }
+}
+
+.content-description {
+  padding: 2em;
 }
 
 h3.title {
   font-size: 2.5em;
   font-weight: 400;
   display: inline-block;
-  padding-bottom: 5px;
   position: relative;
-  margin-bottom: 1.25em;
 }
 h3.title:before{
   content: "";
@@ -106,6 +124,10 @@ h3.title:before{
   left: 40%; width: 20%;
   bottom: -0.5em; height: 2px;
   border-bottom: 2px solid #ea0058;
+}
+
+h3.title + p {
+  margin-top: 3em;
 }
 
 .text-center { text-align: center; }
