--- a/app/Topnav.css
+++ b/app/Topnav.css
@@ -1,10 +1,19 @@
 .topnav {
+  width: 100%;
   display: flex;
   justify-content: flex-end;
 }
   
-.topnav ul { padding: 0; }
-.topnav ul { display: flex; margin: 0; }
+.topnav ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start; /* center items vertically, in this case */
+  align-items: center;
+  width: 100%;
+  height: 78px;
+  margin-left: 2em;
+  margin-right: 2em;
+}
 .topnav ul li { list-style-type: none; }
 .topnav ul > li:not(:last-child) { margin-right: 15px; }
 .topnav ul > li a { color: rgb(33, 37, 41); }
